--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>My first webpage!</title>
+     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>My First Webpage</h1>
-    <h2>Written with a little guidance from Moringa School</h2>
-
+     <h2>Written with a little guidance from <em>Moringa School</em></h2>
+    <p>Welcome to my <strong>first web page</strong>!</p>
     <p>Hello, world!</p>
     <p>Welcome to my first web page!</p>
 
@@ -17,5 +18,7 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+    </p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+    <img src="images/elephant.jpg" alt="A photo of an elephant">
   </body>
 </html>
